--- a/Tareas/Tarea2.ipynb
+++ b/Tareas/Tarea2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<figure>\n",
-    "<img src=\"../Tarea2/Imagenes/logo.png\"  width=\"80\" height=\"80\" align=\"left\"/> \n",
+    "<img src=\"../Tareas/Imagenes/logo.png\"  width=\"80\" height=\"80\" align=\"left\"/> \n",
     "</figure>\n",
     "\n",
     "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>"
@@ -35,7 +35,7 @@
    "source": [
     "<div style=\"display: flex; align-items: center;\">\n",
     "  <figure>\n",
-    "<img src=\"../Tarea2/Imagenes/foto.png\"  width=\"350\" height=\"400\" align=\"left\" /> \n",
+    "<img src=\"../Tareas/Imagenes/foto.png\"  width=\"350\" height=\"400\" align=\"left\" /> \n",
     "</figure>\n",
     "  <div style=\"margin-left: 20px;\">\n",
     "    <h2>Linda Rodríguez</h2>\n",
