--- a/Tareas/Tarea2.ipynb
+++ b/Tareas/Tarea2.ipynb
@@ -9,7 +9,8 @@
     "<img src=\"../Tareas/Imagenes/logo.png\"  width=\"80\" height=\"80\" align=\"left\"/> \n",
     "</figure>\n",
     "\n",
-    "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>"
+    "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>",
+    "# [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lindasheriyn/Diplomado_Ciencia_Datos/blob/master/Tareas/Tarea2.ipynb)"
    ]
   },
   {
