--- a/Tareas/Tarea2.ipynb
+++ b/Tareas/Tarea2.ipynb
@@ -9,8 +9,7 @@
     "<img src=\"../Tareas/Imagenes/logo.png\"  width=\"80\" height=\"80\" align=\"left\"/> \n",
     "</figure>\n",
     "\n",
-    "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>",
-    "# [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lindasheriyn/Diplomado_Ciencia_Datos/blob/master/Tareas/Tarea2.ipynb)"
+    "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>"
    ]
   },
   {
@@ -19,6 +18,14 @@
    "metadata": {},
    "source": [
     "# <span style=\"color:red\"><center>Diferencia entre Analítica de Datos y Ciencia de Datos</center></span>"
+   ]
+  },
+{
+   "cell_type": "markdown",
+   "id": "cf18ce82-95f2-486d-b362-0f641d5c350d",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lindasheriyn/Diplomado_Ciencia_Datos/blob/master/Tareas/Tarea2.ipynb)"
    ]
   },
   {
